pagination layout fixed + tidied html files

--- a/about.html
+++ b/about.html
@@ -16,9 +16,6 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- Load c3.css -->
-
-
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
 
@@ -27,7 +24,8 @@
 
 <body>
 
-    <svg style="position: absolute; width: 0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg style="position: absolute; width: 0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
             <symbol id="icon-Icon-zanata" viewBox="0 0 32 32">
                 <title>Icon-zanata</title>
