--- a/index-processing.html
+++ b/index-processing.html
@@ -16,9 +16,6 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- Load c3.css -->
-
-
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
 
@@ -27,7 +24,8 @@
 
 <body>
 
-    <svg style="position: absolute; width: 0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg style="position: absolute; width: 0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
             <symbol id="icon-Icon-zanata" viewBox="0 0 32 32">
                 <title>Icon-zanata</title>
@@ -188,7 +186,8 @@
                             <div class="panel-heading">Recent Activity</div>
                             <div class="panel-body">
                                 <div class="update">
-                                    <p><i class="fa fa-globe"></i><a href="">Another name</a> translated 200 words in <a href="">Moby Dick</a> finishing on "<a href=""><strong>Now, by all odds, the most ancient extant portrait anyways purporting
+                                    <p><i class="fa fa-globe"></i><a href="">Another name</a> translated 200 words
+                                        in <a href="">Moby Dick</a> finishing on "<a href=""><strong>Now, by all odds, the most ancient extant portrait anyways purporting
 to be the...</strong></a>"</p>
                                     <ul>
                                         <li><i class="fa fa-clock-o"></i><a href="">12 days ago</a>
@@ -203,7 +202,7 @@ to be the...</strong></a>"</p>
                                 </div>
 
                                 <div class="update">
-                                    <p><i class="fa fa-globe"></i><a href="">You</a> translated 200 words in <a href="">Moby Dick</a> finishing on "<a href=""><strong>Not very far distant Flask's boat was also lying breathlessly still...</strong></a>"</p>
+                                    <p><i class="fa fa-globe"></i><a href="">You</a> translated 200 words in <a href="">Moby Dick</a>                                        finishing on "<a href=""><strong>Not very far distant Flask's boat was also lying breathlessly still...</strong></a>"</p>
                                     <ul>
                                         <li><i class="fa fa-clock-o"></i><a href="">12 days ago</a>
                                         </li>
@@ -217,7 +216,7 @@ to be the...</strong></a>"</p>
                                 </div>
 
                                 <div class="update">
-                                    <p><i class="fa fa-eye"></i><a href="">You</a> reviewed 200 words in <a href="">Moby Dick</a> finishing on "<a href=""><strong>That point is this: The
+                                    <p><i class="fa fa-eye"></i><a href="">You</a> reviewed 200 words in <a href="">Moby Dick</a>                                        finishing on "<a href=""><strong>That point is this: The
 Sperm Whale is in some cases sufficiently powerful, knowing,...</strong></a>"</p>
                                     <ul>
                                         <li><i class="fa fa-clock-o"></i><a href="">12 days ago</a>
@@ -232,7 +231,8 @@ Sperm Whale is in some cases sufficiently powerful, knowing,...</strong></a>"</p
                                 </div>
 
                                 <div class="update">
-                                    <p><i class="fa fa-globe"></i><a href="">Another name</a> translated 200 words in <a href="">Moby Dick</a> finishing on "<a href=""><strong>Had you followed Captain Ahab down into his cabin after the...</strong></a>"</p>
+                                    <p><i class="fa fa-globe"></i><a href="">Another name</a> translated 200 words
+                                        in <a href="">Moby Dick</a> finishing on "<a href=""><strong>Had you followed Captain Ahab down into his cabin after the...</strong></a>"</p>
                                     <ul>
                                         <li><i class="fa fa-clock-o"></i><a href="">12 days ago</a>
                                         </li>
@@ -246,7 +246,7 @@ Sperm Whale is in some cases sufficiently powerful, knowing,...</strong></a>"</p
                                 </div>
 
                                 <div class="update">
-                                    <p><i class="fa fa-eye"></i><a href="">You</a> reviewed 200 words in <a href="">Moby Dick</a> finishing on "<a href=""><strong>Nor, in some things, does the common, hereditary experience...</strong></a>"</p>
+                                    <p><i class="fa fa-eye"></i><a href="">You</a> reviewed 200 words in <a href="">Moby Dick</a>                                        finishing on "<a href=""><strong>Nor, in some things, does the common, hereditary experience...</strong></a>"</p>
                                     <ul>
                                         <li><i class="fa fa-clock-o"></i><a href="">12 days ago</a>
                                         </li>
@@ -268,7 +268,8 @@ Sperm Whale is in some cases sufficiently powerful, knowing,...</strong></a>"</p
                         <div class="about panel panel-default">
                             <div class="panel-heading">About</div>
                             <div class="panel-body">
-                                <p>Here is some text that describes the project and directs you to the About page where you will
+                                <p>Here is some text that describes the project and directs you to the About page
+                                    where you will
                                 </p>
                                 <p><a href="">Read more...</a>
                                 </p>
