--- a/settings.html
+++ b/settings.html
@@ -16,9 +16,6 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- Load c3.css -->
-
-
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
 
@@ -27,7 +24,8 @@
 
 <body>
 
-    <svg style="position: absolute; width: 0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg style="position: absolute; width: 0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
             <symbol id="icon-sphere" viewBox="0 0 16 16">
                 <title>sphere</title>
@@ -183,7 +181,8 @@
                                             </form>
 
                                             <h4>Project type</h4>
-                                            <p>Determines how the project is treated for upload and download by clients or through the website. <i class="fa fa-question-circle"></i>
+                                            <p>Determines how the project is treated for upload and download by clients
+                                                or through the website. <i class="fa fa-question-circle"></i>
                                             </p>
                                             <ul>
                                                 <li>
@@ -262,7 +261,8 @@
                                                         <label class="" for="repo-id">Repository (optional) <span class="infotxt">(optional)</span>
                                                         </label>
                                                         <input type="text" class="form-control col-xs-12 col-lg-6" id="repo-id" placeholder="">
-                                                        <p>A clone-able url for your source code (usually uses SSH). e.g. <code>git@github.com:zanata/zanata-server.git</code>
+                                                        <p>A clone-able url for your source code (usually uses SSH).
+                                                            e.g. <code>git@github.com:zanata/zanata-server.git</code>
                                                         </p>
                                                     </div>
                                                 </div>
@@ -319,7 +319,8 @@
                                                         <td>&nbsp;</td>
                                                         <td>
                                                             <div class="dropdown">
-                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+                                                                aria-expanded="true">
                                                                     Disable
                                                                     <span class="caret"></span>
                                                                 </button>
@@ -337,7 +338,8 @@
                                                         <td>&nbsp;</td>
                                                         <td>
                                                             <div class="dropdown">
-                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true"
+                                                                aria-expanded="true">
                                                                     Disable
                                                                     <span class="caret"></span>
                                                                 </button>
@@ -355,7 +357,8 @@
                                                         <td>&nbsp;</td>
                                                         <td>
                                                             <div class="dropdown">
-                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true"
+                                                                aria-expanded="true">
                                                                     Disable
                                                                     <span class="caret"></span>
                                                                 </button>
@@ -373,7 +376,8 @@
                                                         <td>&nbsp;</td>
                                                         <td>
                                                             <div class="dropdown">
-                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true"
+                                                                aria-expanded="true">
                                                                     Disable
                                                                     <span class="caret"></span>
                                                                 </button>
@@ -391,7 +395,8 @@
                                                         <td>&nbsp;</td>
                                                         <td>
                                                             <div class="dropdown">
-                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu5" data-toggle="dropdown" aria-haspopup="true"
+                                                                aria-expanded="true">
                                                                     Disable
                                                                     <span class="caret"></span>
                                                                 </button>
@@ -445,10 +450,14 @@
                                                     <input type="checkbox"> <strong>Invite only</strong>
                                                 </label>
                                             </div>
-                                            <p>Only allow translation by translators who have been explicitly added to this project. When this is turned off, translators from any of the global translation teams will be able to join translation of this project.</p>
+                                            <p>Only allow translation by translators who have been explicitly added
+                                                to this project. When this is turned off, translators from any
+                                                of the global translation teams will be able to join translation
+                                                of this project.</p>
                                             <hr />
                                             <h4>Validation</h4>
-                                            <p>Use these validations to keep translations consistent with the source text.</p>
+                                            <p>Use these validations to keep translations consistent with the source
+                                                text.</p>
 
                                             <p><strong>HTML/XML tags</strong>
                                             </p>
@@ -525,8 +534,12 @@
                                             <hr />
 
                                             <h4>Copy translations</h4>
-                                            <p>"Copy Translations" attempts to reuse translations that have been entered in Zanata by matching them with untranslated strings in your project/version. Consequently, "Copy Translations" is best used before translation and review work is initiated on a project. </p>
-                                            <p class="bg-info">A translation has to pass through each of these checks before it will be copied.</p>
+                                            <p>"Copy Translations" attempts to reuse translations that have been entered
+                                                in Zanata by matching them with untranslated strings in your project/version.
+                                                Consequently, "Copy Translations" is best used before translation
+                                                and review work is initiated on a project. </p>
+                                            <p class="bg-info">A translation has to pass through each of these checks before it will
+                                                be copied.</p>
 
                                             <div class="">
                                                 <p><strong>On content mismatch</strong>
@@ -558,7 +571,8 @@
 
                                             <p><strong>On document mismatch</strong>
                                             </p>
-                                            <p>If the translations are not both from the same document & document path</p>
+                                            <p>If the translations are not both from the same document & document
+                                                path</p>
                                             <div class="btn-group" role="group">
                                                 <button class="btn btn-default" type="button">Continue</button>
                                                 <button class="btn btn-default" type="button">Continue as Fuzzy</button>
@@ -590,7 +604,8 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td><img class="avatar" src="img/grav-1.png" alt="gravatar-1" />Kathryn Gough</td>
+                                                        <td><img class="avatar" src="img/grav-1.png" alt="gravatar-1"
+                                                            />Kathryn Gough</td>
                                                         <td><span class="infotxt">@kadmin</span>
                                                         </td>
                                                         <td>
@@ -634,8 +649,10 @@
                                                 <div class="form-group">
                                                     <label for="sel1">Type</label>
                                                     <select class="form-control" id="sel1">
-                                                        <option>DocumentMilestoneEvent - Trigger when a document is 100% translated or approved</option>
-                                                        <option>DocumentStatsEvent - Trigger when translations are updated (singly or in a batch)</option>
+                                                        <option>DocumentMilestoneEvent - Trigger when a document is 100%
+                                                            translated or approved</option>
+                                                        <option>DocumentStatsEvent - Trigger when translations are updated
+                                                            (singly or in a batch)</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -655,7 +672,8 @@
 
                                             <div class="form-group">
                                                 <div class="bg-info">
-                                                    <label for="aboutcomment">This section can be used to add notes for translators or other contributors to help answer questions or complete translations.</label>
+                                                    <label for="aboutcomment">This section can be used to add notes for translators or other
+                                                        contributors to help answer questions or complete translations.</label>
                                                 </div>
                                                 <textarea class="form-control" rows="10" id="aboutcomment" placeholder="Installed from:git clone git://github.com/definite/ibus-chewing.git"></textarea>
                                             </div>
