--- a/vsettings.html
+++ b/vsettings.html
@@ -16,9 +16,6 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- Load c3.css -->
-
-
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
 
@@ -27,7 +24,8 @@
 
 <body>
 
-    <svg style="position: absolute; width: 0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg style="position: absolute; width: 0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
             <symbol id="icon-Icon-zanata" viewBox="0 0 32 32">
                 <title>Icon-zanata</title>
@@ -170,7 +168,8 @@
                                             </form>
 
                                             <h4>Project type</h4>
-                                            <p>Determines how the project is treated for upload and download by clients or through the website. <i class="fa fa-question-circle"></i>
+                                            <p>Determines how the project is treated for upload and download by clients
+                                                or through the website. <i class="fa fa-question-circle"></i>
                                             </p>
 
                                             <button class="disabled btn btn-primary btn-sm">Copy project type from project</button>
@@ -345,7 +344,8 @@
                                                         <td>&nbsp;</td>
                                                         <td>
                                                             <div class="dropdown">
-                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+                                                                aria-expanded="true">
                                                                     Disable
                                                                     <span class="caret"></span>
                                                                 </button>
@@ -363,7 +363,8 @@
                                                         <td>&nbsp;</td>
                                                         <td>
                                                             <div class="dropdown">
-                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true"
+                                                                aria-expanded="true">
                                                                     Disable
                                                                     <span class="caret"></span>
                                                                 </button>
@@ -381,7 +382,8 @@
                                                         <td>&nbsp;</td>
                                                         <td>
                                                             <div class="dropdown">
-                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true"
+                                                                aria-expanded="true">
                                                                     Disable
                                                                     <span class="caret"></span>
                                                                 </button>
@@ -399,7 +401,8 @@
                                                         <td>&nbsp;</td>
                                                         <td>
                                                             <div class="dropdown">
-                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true"
+                                                                aria-expanded="true">
                                                                     Disable
                                                                     <span class="caret"></span>
                                                                 </button>
@@ -417,7 +420,8 @@
                                                         <td>&nbsp;</td>
                                                         <td>
                                                             <div class="dropdown">
-                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu5" data-toggle="dropdown" aria-haspopup="true"
+                                                                aria-expanded="true">
                                                                     Disable
                                                                     <span class="caret"></span>
                                                                 </button>
@@ -470,7 +474,8 @@
                                             <h4>Validation</h4>
 
 
-                                            <p>Use these validations to keep translations consistent with the source text.</p>
+                                            <p>Use these validations to keep translations consistent with the source
+                                                text.</p>
                                             <button class="btn btn-primary btn-sm">Copy translation validation settings from project</button>
 
 
@@ -505,7 +510,8 @@
 
                                             <p><strong>Positional printf (XSI extension)</strong>
                                             </p>
-                                            <p>Check that positional printf style (%n$x) variables are consistent. More …</p>
+                                            <p>Check that positional printf style (%n$x) variables are consistent.
+                                                More …</p>
                                             <div class="btn-group" role="group">
                                                 <button class="btn btn-default" type="button">Off</button>
                                                 <button class="btn active btn-warning" type="button">Warning</button>
@@ -525,7 +531,8 @@
 
                                             <p><strong>Tab characters (\t)</strong>
                                             </p>
-                                            <p>Check whether source and target have the same number of tabs. More …</p>
+                                            <p>Check whether source and target have the same number of tabs. More
+                                                …</p>
                                             <div class="btn-group" role="group">
                                                 <button class="btn btn-default" type="button">Off</button>
                                                 <button class="btn active btn-warning" type="button">Warning</button>
