--- a/languages.html
+++ b/languages.html
@@ -16,9 +16,6 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- Load c3.css -->
-
-
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
 
@@ -27,7 +24,8 @@
 
 <body>
 
-    <svg style="position: absolute; width: 0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg style="position: absolute; width: 0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
             <symbol id="icon-Icon-zanata" viewBox="0 0 32 32">
                 <title>Icon-zanata</title>
@@ -130,19 +128,19 @@
                     <h2>Languages</h2>
                     <div class="col-xs-12">
                         <div class="left-form toolbar col-xs-12" role="toolbar">
-                            <div class="search-box col-xs-7 col-sm-7 col-md-7 col-lg-4">
+                            <div class="search-box col-xs-6 col-sm-6 col-md-3 col-lg-4">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search for...">
+                                    <input type="text" class="form-control" placeholder="Search languages">
                                     <span class="input-group-btn">
-        <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
-      </span>
+                                        <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
+                                        </span>
                                 </div>
                                 <!-- /input-group -->
                             </div>
                             <!-- /.col-lg-6 -->
 
-                            <div class="sort-items col-xs-4 col-sm-3 col-md-3 col-lg-3">
-                                <select id="ddlList1">
+                            <div class="sort-items col-xs-3-pull-right col-sm-3-pull-right col-md-3">
+                                <select class="pull-right" id="ddlList1">
                                     <option value="2">Alphabetical</option>
                                     <option value="1">Last source update</option>
                                 </select>
@@ -150,24 +148,28 @@
                             </div>
                             <!-- /.col-lg-6 -->
 
-                            <div class="show-items col-xs-4 col-sm-3 col-md-2 col-lg-2">
+                            <div class="show-items col-xs-3 col-sm-3 col-md-2 col-lg-2">
                                 <span>Show</span>
                                 <select id="ddlList2">
-                                    <option value="3">10</option>
-                                    <option value="1">20</option>
-                                    <option value="1">50</option>
+                                    <option value="1">10</option>
+
+                                    <option value="4">100</option>
+                                    <option value="2">20</option>
+
+                                    <option value="3">50</option>
+
 
                                 </select>
 
 
                             </div>
                             <!-- /.col-lg-6 -->
-                            <div class="page-count pull-right col-xs-8 col-sm-9 col-md-9 col-lg-3">
+                            <div class="page-count pull-right col-xs-8 col-sm-8 col-md-4 col-lg-3">
                                 <nav aria-label="...">
                                     <ul class="pagination pull-right">
                                         <li class="disabled">
                                             <span>
-        <span aria-hidden="true">«</span>
+                                        <span aria-hidden="true">«</span>
                                             </span>
                                         </li>
                                         <li class="active">
